--- a/styles/reset.css
+++ b/styles/reset.css
@@ -30,8 +30,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-}
-/*ol, ul {
+/*}
+ol, ul {
 	list-style: none;
 }
 blockquote, q {
@@ -40,9 +40,8 @@ blockquote, q {
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
-	content: none;
+	content: none;*/
 }
-*/
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
