--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -250,10 +250,8 @@ header {
 }
 .mobile_dropdown {
 		background-color: rgba(45, 45, 44, .87);
-		padding: 20px 80px;
-		margin: 0px;
 		box-sizing: border-box;
-
+		display: none;
 }
 
 
@@ -293,7 +291,7 @@ ul li.navLabel a {
 #menuItems {
 	display: flex;
 	flex-direction: column;
-	
+	margin: 0px 30px;
 }
 
 li.navLabel {
@@ -302,10 +300,12 @@ li.navLabel {
 	align-items: center;
 	letter-spacing: .5px;
 	text-transform: uppercase;
-	margin: 20px 0px;
+	padding: 40px 0px;
 }
-.mobile_dropdown {
-	display: none;
+
+#menuItems li.navLabel:nth-child(1), li.navLabel:nth-child(2), li.navLabel:nth-child(3), li.navLabel:nth-child(4)   {
+	 border-bottom: 1px solid rgba(241, 228, 178, .15);
+
 }
 
 
@@ -331,6 +331,7 @@ main {
 	background-color: rgba(45, 44, 45, .8);
 	z-index: 9;
 	position: absolute;
+	width: 100%;
 	height: 700px;
 }
 
@@ -343,6 +344,8 @@ main {
 	overflow: hidden;
 	transform: translate3d(0px, 0px, 0);
 	transition: transform .8s cubic-bezier(.45,1,.52,1.18);
+	width: 100%;
+	height: 600px;
 
 }
 
@@ -384,12 +387,14 @@ main {
 footer {
 	display: flex;
 	flex-direction: column;
-	align-content: center;
+	align-content: flex-end;
 	justify-content: center;
 	order: 4;
 	border-width: 1px 0px 0px 0px;
-	border-color: rgba(45, 45, 44, .2);
+	/*border-color: rgba(45, 45, 44, .2);*/
 	border-style: solid;
+	height: 100px;
+	padding: 10px 0px;
 }
 
 
@@ -601,7 +606,7 @@ footer p {
 		    z-index: 9;
 		    position: absolute;
 		    width: 100%;
-		    height: 700px;
+		    height: 100vh;
 		    transition: opacity;
 	}
 
@@ -670,8 +675,20 @@ footer p {
 
 	.navLabel {
 		justify-content: space-between;
-		padding: 0px 20px;
 	}
+
+
+	#menuItems li.navLabel:nth-child(1), li.navLabel:nth-child(2), li.navLabel:nth-child(3), li.navLabel:nth-child(4)   {
+		padding: 0px 30px;
+		border: none;
+	}
+
+	#menuItems li.navLabel:last-child {
+		padding-left: 30px !important;
+	}
+	
+
+
 
 
 	 #menuItems {
